--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@zoomus/websdk": "^1.9.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "@zoomus/websdk": "^1.9.1"
+    "vue": "^2.6.12"
   },
   "devDependencies": {}
 }
